--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 body {
-    background-color: #EFEFEF;
+    background-color: #212121;
+    margin: 0;
 }
 
 #nav-icon {
-    background-color: #363636;
+    background-image: linear-gradient(90deg,#363636,#3b3b3b,#363636);
     position: fixed;
-    left: 40%;
-    top: 4%;
-    width: 20%;
+    left: 42.5%;
+    z-index: 1000;
+    top: 1%;
+    width: 15%;
     padding-top: 14px;
-    border-radius: 12px;
+    border-radius: 5px;
     box-shadow: 4px 3px 10px #00000069;
     padding-bottom: 14px;
     display: flex;
@@ -36,15 +38,18 @@ body {
 }
 #posts{
     width: 100%;
+    align-items: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 .post{
-    box-shadow: 2px 3px 16px rgba(0, 0, 0, 0.137);
+    box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.137);
     display: block;
-    border-radius: 7px;
-    width: 50%;
-    background-color: white;
+    margin-bottom: 40px;
+    border-radius: 3px;
+    width: 30%;
+    background-color: #131313;
     padding: 20px;
 }
 .spacingTohalf{
@@ -59,14 +64,17 @@ body {
     width: 30px;
 }
 .userInfo span{
-    font-family: 'Inria Sans', sans-serif;
+    font-family: "Inconsolata", monospace;
     font-size: 14;
+    color:rgb(218, 218, 218);
     font-weight: bold;
 }
 .caption{
     margin: 20px;
     font-family: 'Inria Sans', sans-serif;
-    font-size: 24;
+    font-weight: bold;
+    color: rgb(231, 231, 231);
+    font-size: 20;
 }
 .postImage{
     width: 100%;
@@ -78,17 +86,29 @@ body {
     display: block;
 }
 .inatections{
-    width: 15%;
+    width: 20%;
     margin: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .inatections span{
     display: flex;
     font-family: 'Inria Sans', sans-serif;
     font-weight: bolder;
     gap: 5px;
+    color: white;
+    font-family: 10;
     align-items: center;
+}
+.inatections span span{
+    margin-left: 5px;
+}
+
+.inatections span img{
+    width: 20px;
+}
+.inatections img{
+    width: 20px;
 }
 #selfProfileInfo{
     width: 100%;
@@ -109,8 +129,114 @@ body {
     font-family: "Inconsolata", monospace;
     font-weight:  900;
     margin-top: 10px;
+    color: white;
     font-size: 40px;
 }
 .editIcon{
     width: 20px;
+}
+
+#notifications{
+    position: relative;
+    top: 20%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.notification{
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    box-shadow: 2px 3px 16px rgba(0, 0, 0, 0.137);
+    margin-bottom: 30px;
+    border-radius: 2px;
+    width: 30%;
+    background-color: #131313;
+}
+.notification img{
+    width: 40px;
+}
+.line-saparation{
+    width: 2px;
+    background-color: #D9D9D9;
+    height: 20px;
+}
+.notification *{
+    margin-left: 10px;
+}
+.userNameInNotification{
+    font-family: "Inconsolata", monospace;
+    font-weight:  bold;
+    color: rgb(105, 105, 105);
+}
+.notificationMessage{
+    font-family: "Inconsolata", monospace;
+    font-weight:  900;
+    color: rgb(255, 255, 255);
+}
+
+#addingPost{
+    width: 60%;
+    height: 60%;
+    position: fixed;
+    left: 20%;
+    top: 20%;
+    z-index: 2000;
+    display: flex;
+    flex-direction: column;
+    background-color: #363636;
+}
+#addingPostOverlay{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.849);
+    z-index: 1500;   
+}
+#addCaption{
+    width: 100%;
+    border: none;
+    outline: none;
+    background-color: #6F6F6F;
+    resize: none;
+    font-family: 'Inria Sans', sans-serif;
+    font-weight: bolder;
+    font-size: 16px;
+    border-radius: 2px;
+    padding: 20px;
+    color:white;
+    height: 50%;
+}
+#addCaption:focus{
+    outline: none;
+    border: none;
+}
+#addCaption::placeholder{
+    color: rgba(0, 0, 0, 0.397);
+}
+#addingPost label img{
+    margin: 10px;
+    width: 40px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+#publishButton{
+    width: 130;
+    padding: 10px;
+    text-align: center;
+    font-family: 'Inria Sans', sans-serif;
+    font-weight: bolder;
+    margin: 10px;
+    border-radius: 4px;
+    background-color: #A7A7A7;
+    color: #3A3A3A;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+#publishButton:hover{
+    background-color: #979797;
 }
