--- a/static/style.css
+++ b/static/style.css
@@ -78,15 +78,18 @@ body{
 
 
 #content{
-    width: 10%;
+
     display: flex;
     flex-direction: column;
     margin-left: 4px;
-    margin-right: 24px;
     width: 100%;
     margin-top: 20px;
     opacity: 100%;
     transition: opacity 100ms ease;
+    margin-right: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding-right: 24px;
 }
 #headerText{
     font-family: "Be Vietnam Pro", sans-serif;
@@ -233,11 +236,9 @@ body{
     margin-bottom: 12px;
     font-family: "Be Vietnam Pro", sans-serif;
     font-size: 16px;
-    word-break: break-word; /* Ensures long words break */
-    overflow-wrap: anywhere; /* Alternative for better support */
-    white-space: normal; 
+    white-space: pre-wrap;
     line-height: 1.8;
-    
+
 }
 .imageFrame{
     padding: 16px;
@@ -262,6 +263,7 @@ body{
 .postInarectionItem img{
     width: 24px;
     margin-left: 12px;
+    cursor: pointer;
 }
 .postInarectionItem span{
     font-family: "Be Vietnam Pro", sans-serif;
