using cloud storage for icnos

--- a/static/style.css
+++ b/static/style.css
@@ -431,3 +431,12 @@ body{
     background-color: rgb(255, 81, 0);
     margin-left: 2px;
 }
+
+#postLoadingWatingImage{
+    width: 50px;
+    margin-top: 40px;
+}
+#postLoadingWating{
+    width: 100%;
+    text-align: center;
+}
