--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,9 @@ body{
     height: 100%;
     display: flex;
 }
+#previewImage{
+
+}
 #nav{
     width: 300px;
     height: 70%;
@@ -164,6 +167,7 @@ body{
 #selcetImageButtonPareant label img{
     width: 20px;
     cursor: pointer;
+    transition: all 500ms ease;
 }
 #postButtonArea{
     display: flex;
@@ -184,6 +188,7 @@ body{
     cursor: pointer;
     border-radius: 12px;
     outline: none;
+    transition: all 500ms ease;
 }
 .currentNavLocation{
     background-color: #F0F2F5;
@@ -463,6 +468,41 @@ body{
     text-align: center;
 }
 
+#infoPopUp{
+    width: 100%;
+    display: flex;
+    position: fixed;
+    z-index: 99999;
+    flex-direction: column; /* Stack elements vertically */
+    align-items: center; 
+    margin-top: 20px;
+}
+.infopopup{
+    display: flex;
+    font-family: "Be Vietnam Pro", sans-serif;
+    font-size: 20px;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    color: #ffffff;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    transition: all 500ms ease;
+}
+.normal{
+    background-color: rgb(0, 183, 255);
+    color: rgb(0, 0, 0) !important;
+    
+}
+.error{
+    background-color: rgb(255, 0, 0);
+}
+.success{
+    background-color: rgb(0, 255, 85);
+    color: rgb(0, 0, 0) !important;
+}
+
 @media only screen and (max-width: 768px) {
 
     .navELements span{
@@ -528,4 +568,7 @@ body{
     .comment {
         width: 80%;
     }
-}
+    .infopopup{
+        width: 50%;
+    }
+} 
