--- a/static/style.css
+++ b/static/style.css
@@ -8,9 +8,7 @@ body{
     height: 100%;
     display: flex;
 }
-#previewImage{
 
-}
 #nav{
     width: 300px;
     height: 70%;
@@ -133,7 +131,7 @@ body{
 #textArea{
     width: 100%;
     height: 79px;
-    background-color: rgb(255, 140, 0);
+
 }
 #postButtonArea{
     transition: height 1s ease;
@@ -213,6 +211,7 @@ body{
 .creatorInfo img{
     width: 56px;
     border-radius: 50%;
+    cursor: pointer;
 }
 .postCreatorNameinPost{
     font-family: "Be Vietnam Pro", sans-serif;
@@ -480,12 +479,13 @@ body{
 .infopopup{
     display: flex;
     font-family: "Be Vietnam Pro", sans-serif;
-    font-size: 20px;
+    font-size: 14px;
     width: 20%;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
     color: #ffffff;
+    font-weight: 600;
     margin-bottom: 10px;
     border-radius: 5px;
     transition: all 500ms ease;
@@ -541,6 +541,7 @@ body{
         margin-left: 0px;
     }
     .creatorInfo img {
+        
         width: 40px;
     }
     .postCreatorNameinPost {
@@ -570,5 +571,9 @@ body{
     }
     .infopopup{
         width: 50%;
+    }
+    .caption span {
+        width: 90%;
+        max-width: 90%;
     }
 } 
